--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -21,6 +21,7 @@ substrate-build-script-utils = '3.0.0'
 [dependencies]
 jsonrpc-core = '15.1.0'
 structopt = '0.3.8'
+serde_json = "1.0.41"
 
 # Substrate dependencies
 frame-benchmarking = '3.1.0'
