--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.5"
 networks:
-  vppnetwork:
+  testnetwork:
     name: exchangenetwork
 
 services:
@@ -13,6 +13,6 @@ services:
     environment:
       - CARGO_HOME=/var/www/node-template/.cargo
     networks:
-      vppnetwork:
+      testnetwork:
         aliases: 
           - exchangenetwork
