--- a/pallets/exchange/Cargo.toml
+++ b/pallets/exchange/Cargo.toml
@@ -18,7 +18,10 @@ frame-system = { default-features = false, version = '3.0.0' }
 frame-support = { default-features = false, version = '3.0.0' }
 frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
 sp-std = { default-features = false, version = '3.0.0' }
+pallet-balances = { default-features = false, version = '3.0.0' }
 
+orml-currencies = {default-features = false, version = '0.4.0'}
+orml-tokens = {default-features = false, version = "0.4.0"}
 orml-traits = { default-features = false, version = '0.4.0' }
 orml-utilities = { default-features = false, version = '0.4.0' }
 
@@ -37,8 +40,11 @@ std = [
 	'frame-benchmarking/std',
 	'sp-std/std',
 	'sp-runtime/std',
+	'orml-currencies/std',
+	'orml-tokens/std',
 	'orml-traits/std',
-	'orml-utilities/std'
+	'orml-utilities/std',
+	'pallet-balances/std',
 ]
 runtime-benchmarks = [
 	'frame-benchmarking',
